# Capstone-Server

./: BLEclient.py  BME_BLEclient.py  README.md  Smoke_BLEclient.py  Water_BLEclient.py  app.py  cleanup_db.py  db_handler.py  diabugatti  diabugatti.pub  ftp_server.py  scanBLE.py  sensor_data.db  sensors.db  start_system.sh
Testing/: app.py  clientBLEtest.py
env/: pyvenv.cfg
instance/: security.sqlite
security/: BME_BLEclient.py  __init__.py  app.py  db.py  sensor_data.db
security/static/: style.css
security/templates/: __init__.py  base.html  db_handler.py  home.html  index.html
security/templates/auth/: login.html  register.html
sqliteTest/: env_log.py  lab_app.py
website/: README.md  pyproject.toml
website/instance/: config.py  flaskr.sqlite  security.sqlite
website/security/: __init__.py  auth.py
website/security/static/: style.css
website/security/templates/: base.html  home.html
website/security/templates/auth/: register.html
